correções de formatações básicas dos notebooks

--- a/01-Introducao Python/0 - Primeiro nb.ipynb
+++ b/01-Introducao Python/0 - Primeiro nb.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# #Datahackers - Basico de Python\n",
+    "#  Básico de Python\n",
     "\n",
     "## Tipos de variaveis"
    ]
