--- a/01-Introducao Python/2 - Analise Exploratório de Dados.ipynb
+++ b/01-Introducao Python/2 - Analise Exploratório de Dados.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <center>Parte 2 - Analisando os dados </center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Iniciamos importanto os pacotes que serão usados"
    ]
   },
