--- a/01-Introducao Python/1 - Data Cleaning.ipynb
+++ b/01-Introducao Python/1 - Data Cleaning.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Depois, visualizamos alguns linhas iniciais com o método head"
+    "Depois, visualizamos algumas linhas iniciais com o método head"
    ]
   },
   {
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos também ter uma analise inicial das colunas quantitativas com a função describe"
+    "Podemos também ter uma análise inicial das colunas quantitativas com a função describe"
    ]
   },
   {
@@ -571,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Houve um erro devido a dados falhos, vams corrigir isso."
+    "Houve um erro devido a dados falhos, vamos corrigir isso."
    ]
   },
   {
@@ -604,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com coerce, ele atribua o valor NaT (Nulo) para os dados com erros. Podemos verifica-los abaixo:"
+    "Com o parametro errors='coerce', os valores falhos são transformados em valor NaT (Nulo). Podemos verifica-los abaixo:"
    ]
   },
   {
@@ -834,7 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "df tem uma série de métodos que podem ser uteis para analise, como na data, por exemplo:"
+    "df tem uma série de métodos que podem ser úteis para análise, como na data, por exemplo:"
    ]
   },
   {
@@ -989,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos organizar as colunas para que dia fique depois de mes"
+    "Vamos organizar as colunas para que dia fique depois de mês."
    ]
   },
   {
@@ -1171,7 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos agora analisar a coluna TIPO_DESPESA"
+    "Vamos agora avaliar a coluna TIPO_DESPESA"
    ]
   },
   {
@@ -1445,12 +1445,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-22f45c6d9880>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Usamos index False para não criar uma coluna com o index das linhas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'projeto_gastos_politicos/dados_limpos.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Usamos index False para não criar uma coluna com o index das linhas\n",
-    "# Mantemos o encoding também por definição do curso, mas não é necessário.\n",
     "df.to_csv('projeto_gastos_politicos/dados_limpos.csv', index = False)"
    ]
   },
