--- a/01-Introducao Python/2 - Analise Exploratório de Dados.ipynb
+++ b/01-Introducao Python/2 - Analise Exploratório de Dados.ipynb
@@ -16,8 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -26,7 +28,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Função que dá \"temas\" para os gráficos plot\n",
-    "# Dica, coloque um nome errado que no erro ele irá listar os nomes disponiveis\n",
+    "# Dica, coloque um nome errado que no erro ele irá listar os nomes disponíveis\n",
     "plt.style.use('ggplot')"
    ]
   },
@@ -34,14 +36,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Carregamos o arquivo criado na atividade de Data Cleaning"
+    "Carregamos então o arquivo criado na atividade de Data Cleaning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -52,14 +54,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Efetuamos uma analise visual inicial para confirmar que os dados estão ok"
+    "Efetuamos uma análise visual inicial para confirmar que os dados estão ok"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -92,7 +94,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -239,7 +241,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -360,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -532,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -619,7 +627,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -714,7 +724,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -752,7 +764,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -781,7 +795,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -833,7 +847,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -874,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -915,7 +933,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1352,7 +1372,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2518,7 +2540,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2674,7 +2698,7 @@
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -3142,7 +3166,9 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3381,7 +3407,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3466,7 +3494,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3541,20 +3571,6 @@
     "df.loc[df['DATA'] == '1977-10-10', 'ANO'] = 1977\n",
     "df.loc[df['DATA'] == '1977-10-10']"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vamos avaliar os gastos por tipo de despesa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
