Adição de projeto machine learning

--- a/01-Introducao Python/0 - Primeiro nb.ipynb
+++ b/01-Introducao Python/0 - Primeiro nb.ipynb
@@ -4,39 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Básico de Python\n",
+    "#  Noções Básicas de Python\n",
     "\n",
     "## Tipos de variaveis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('1', 3, 30.0, True)"
+       "1"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "var = 1\n",
-    "flutuante = 1.0\n",
-    "charac = '1'\n",
-    "booleana = True\n",
-    "lista = ['1', 2, 30.0, True]\n",
-    "dicionario = {\n",
+    "inteiro = 1 # int\n",
+    "flutuante = 1.0 # float\n",
+    "texto = '1' # string\n",
+    "booleana = True # boolean\n",
+    "lista = ['1', 2, 30.0, True] # list\n",
+    "dicionario = { # Dictionary\n",
     "    'nome': 'Alex',\n",
     "    'idade': 30\n",
-    "}\n",
-    "tupla = ('1', 3, 30.0, True)\n",
-    "tupla"
+    "} \n",
+    "tupla = ('1', 3, 30.0, True) # tuple\n",
+    "\n",
+    "# Digite o nome da variavel que deseja ver na linha abaixo\n",
+    "inteiro"
    ]
   },
   {
@@ -65,10 +67,9 @@
     }
    ],
    "source": [
+    "# para cada item na tuple, execute print\n",
     "for i in tupla:\n",
-    "    print(i)\n",
-    "\n",
-    "\n"
+    "    print(i)\n"
    ]
   },
   {
@@ -86,6 +87,7 @@
     }
    ],
    "source": [
+    "# para cada item no dicionario, execute print no valor da chave\n",
     "for i in dicionario:\n",
     "    print(dicionario[i])\n",
     "    "
@@ -110,6 +112,7 @@
     }
    ],
    "source": [
+    "# Enquanto quantidade de itens na lista for maior que zero, remova o ultimo item e execute print dele\n",
     "while len(lista) > 0:\n",
     "    print(lista.pop())"
    ]
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,13 +134,16 @@
      "output_type": "stream",
      "text": [
       "string\n",
-      "3 not in list\n",
+      "3 não está na lista\n",
       "30.0\n",
       "True\n"
      ]
     }
    ],
    "source": [
+    "# Para cada item da tupla, se ele  não for string e estiver na lista, execute print\n",
+    "# Se for string, execute print('string')\n",
+    "# Se não, execute print(item não esta na lista)\n",
     "variavel = tupla\n",
     "for i in variavel:\n",
     "    if i in lista and type(i) is not str:\n",
@@ -145,7 +151,7 @@
     "    elif type(i) is str:\n",
     "        print('string')\n",
     "    else:\n",
-    "        print(\"{} not in list\".format(i))"
+    "        print(\"{} não está na lista\".format(i))"
    ]
   },
   {
@@ -157,28 +163,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not interpreted as number\n",
+      "Não interpretado como número\n",
       "4\n",
       "60.0\n",
-      "not interpreted as number\n"
+      "Não interpretado como número\n"
      ]
     }
    ],
    "source": [
+    "# Função que verifica cada item de uma lista\n",
+    "# Se não for do tipo numero, execute print('Não interpretado como número')\n",
+    "# Se não, multiplique por dois e execute print do resultado\n",
     "def mutiplique_por_2(l):\n",
     "    for i in l:\n",
     "        if(type(i) is not int and type(i) is not float):\n",
-    "            print('not interpreted as number')\n",
+    "            print('Não interpretado como número')\n",
     "        else:\n",
     "            print(i * 2)\n",
-    "            \n",
+    "\n",
+    "# Execute a função criada.\n",
     "mutiplique_por_2(lista)"
    ]
   }
